# commit-fintech-project

./: SETUP_GUIDE.md
QuantEase/: index.html  package-lock.json  package.json  vite.config.js
QuantEase/src/: App.jsx
QuantEase/src/components/: AppSidebar.jsx  BacktestResults.jsx  Navbar.jsx  StrategyBuilder.jsx  login-form.jsx  signup-form.jsx
QuantEase/src/components/education/: EducationOverview.jsx  QuizComponent.jsx  TutorialViewer.jsx
QuantEase/src/components/risk-management/: RiskAlerts.jsx  RiskAnalysis.jsx  RiskControls.jsx  RiskOverview.jsx
QuantEase/src/components/strategy-builder/: BasicStrategyBuilderDialog.jsx  (+5 more)
QuantEase/src/config/: api.js
QuantEase/src/context/: AuthContext.jsx
QuantEase/src/hooks/: useAuth.js
QuantEase/src/lib/: api.js  websocket.js
QuantEase/src/stores/: strategyStore.js
QuantEase/src/utils/: educationData.js  riskDemoData.js
backend/: .gitignore  API_INTEGRATION.md  README.md  pyproject.toml  test_setup.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: backtests.py  comments.py  compliance.py  education.py  marketplace.py  paper_trades.py  risk_reports.py  strategies.py  user_progress.py  websocket.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  backtest.py  comment.py  compliance.py  education.py  marketplace.py  paper_trade.py  risk_report.py  strategy.py  user_progress.py
backend/app/services/: auth.py  backtest.py  market_data.py  paper_trading.py  websocket_service.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+17 files in other folders)
