[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "QuantEase - Algorithmic Trading Platform Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pydantic>=2.11.8",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.1.1",
    "supabase>=2.18.1",
    "uvicorn>=0.35.0",
    "starlette>=0.27.0",
    "yfinance>=0.2.18",
    "websockets>=12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
